--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
   },
   "homepage": "https://github.com/andrewsuzuki/react-twitter-widgets#readme",
   "devDependencies": {
+    "@types/react": "^16.0.5",
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.0.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
@@ -47,12 +48,11 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-babel": "^4.0.0",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "react": "^15.3.0",
-    "rimraf": "^2.5.2",
-    "@types/react": "^16.0.5"
+    "rimraf": "^2.5.2"
   },
   "dependencies": {
     "exenv": "^1.2.1",
