--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
+    "@types/react": "^16.9.35",
     "nwb": "0.25.x",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
