--- a/package.json
+++ b/package.json
@@ -18,17 +18,16 @@
     "umd"
   ],
   "dependencies": {
-    "@storybook/addon-storysource": "^5.3.19",
     "loadjs": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
+    "@storybook/addon-storysource": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/react": "^5.3.19",
+    "@storybook/storybook-deployer": "^2.8.6",
     "@types/react": "^16.9.35",
     "babel-loader": "^8.1.0",
     "nwb": "0.25.x",
@@ -40,9 +39,9 @@
   },
   "scripts": {
     "build": "nwb build-react-component",
-    "clean": "nwb clean-module && nwb clean-demo",
+    "clean": "nwb clean-module",
     "prepublishOnly": "npm run build",
-    "start": "nwb serve-react-demo",
+    "start": "npm run storybook",
     "test": "nwb test-react",
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server",
