--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/react": "^5.3.19",
     "@storybook/storybook-deployer": "^2.8.6",
+    "@storybook/theming": "^5.3.19",
     "@types/react": "^16.9.35",
     "babel-loader": "^8.1.0",
     "nwb": "0.25.x",
@@ -46,7 +47,8 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "deploy-storybook-ghpages": "storybook-to-ghpages"
   },
   "repository": {
     "type": "git",
